fixed a weird bug where, if you scroll down so a poster is part in the body and part behind the header, and you hovered over it, it would jump outside the header

--- a/home.css
+++ b/home.css
@@ -74,7 +74,7 @@
 .middle , .home {
   text-align: center;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 132px;
   margin-bottom: 0;
   color: #848484;
   width: 85%;
@@ -86,6 +86,7 @@
 
 .welcome {
   margin-bottom: 10px;
+  margin-top: -15px;
 }
 
 .divider{
